update with new content from Sharon

--- a/app/views/forms/education/P1-start.html
+++ b/app/views/forms/education/P1-start.html
@@ -10,17 +10,15 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
       <h1 class="govuk-heading-l">
-          Apply online for primary 1 August 2019
+          Apply online for primary 1 - August 2019
       </h1>
 
       <h2 class="govuk-heading-m">Before you start</h2>
-      <p>Use this form:</p>
       <ul class="govuk-list govuk-list--bullet">
-          <li>to apply for primary 1 enrolment only</li>
-          <li>if you live in East Renfrewshire and are applying to enrol at your catchment school. For other schools, apply for a placing request</li>
-          <li>to enrol if your catchment school even if you're applying to defer primary 1 entry for your child</li>
-          <li>to enrol at your catchment school even if you're moving house and later need to apply to another school</li>
-          <li>if you have parental rights and responsibilities for the child</li>
+          <li>you should read the admissions policy</li> 
+          <li>you can only apply to your catchment school</li>
+          <li>you still need to apply to your catchment school if you make a placing request, move house or defer entry</li>
+          <li>you need to provide proof of your details at a later date</li>
        </ul>
        <p class="govuk-!-padding-top-4">You can find out how we use your information in our <a href="/privacy.html">privacy statement</a>.</p>
 
@@ -36,9 +34,8 @@
 <div class="design-notes-box">
     <h3 class="govuk-heading-s">Design notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
-        <li>content of this page to be redrafted</li> 
-        <li>warning about only using the back link in the form, and unable to edit(?)</li>
-        <li>Reference to make yourself familiar to the admission policy</li>
+        <li>This is new content - needs to be signed off by Education</li> 
+        <li>add a warning about only using the back link in the form, and unable to edit(?)</li>
     </ul>
 </div>
 
