--- a/app/views/forms/education/denominational-or-non.html
+++ b/app/views/forms/education/denominational-or-non.html
@@ -10,7 +10,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
         <h1 class="govuk-heading-l">
-            Apply online for primary 1 August 2019
+            Apply online for primary 1 - August 2019
         </h1>
      <form class="form" method="post">
       {% from "radios/macro.njk" import govukRadios %}
@@ -21,7 +21,7 @@
         name: "school",
         fieldset: {
           legend: {
-            text: "Select your preferred catchment school",
+            text: "Select a school",
             isPageHeading: true,
             classes: "govuk-fieldset__legend--m"
           }
@@ -45,7 +45,11 @@
       </form>
       <div class="design-notes-box">
           <h3 class="govuk-heading-s">Design notes:</h3>
-          <p>List of the schools from CAG to be double checked to see if we can remove abbreviations, or Thomas's instead of Thomass at the moment and make sure each name is exactly as the list we have for the alternative school, to avoid the school being present again in the second list. Heather will contact the person who can check this.</p>
+          <p>need confirmation for the question: "Select your preferred catchment school" or "Select a school"</p>
+          <p>List of the schools from CAG to be double checked make sure each name is exactly as the list we have for the alternative school, to avoid the school being present again in the second list.</p>
+          <p>Scott has a way to display differently from CAG - he has managed it for OLM and could do it for Thomas too
+
+          </p>
       </div>
     </div>
 </div>
