--- a/app/views/forms/education/moving.html
+++ b/app/views/forms/education/moving.html
@@ -10,7 +10,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
         <h1 class="govuk-heading-l">
-            Apply online for primary 1 August 2019
+            Apply online for primary 1 - August 2019
         </h1>
 
       <form class="form" method="post">
@@ -23,7 +23,7 @@
         value: data['moving'],
         fieldset: {
           legend: {
-            text: "Are you currently living at a different address?",
+            text: "Do you currently live at a different address? ",
             isPageHeading: true,
             classes: "govuk-fieldset__legend--m"
           }
@@ -48,10 +48,6 @@
 </div>
 <div class="design-notes-box">
     <h3 class="govuk-heading-s">Design notes:</h3>
-    <ul class="govuk-list govuk-list--bullet">
-      <li>content, including heading to be drafted</li> 
-      <li>we will need to know their current postcode, use a text box for it as it could be outside the UK</li>
-      <li>we will also need the date they are moving in to the new ERC address</li>
-  </ul>
+    <p>new content</p>
 </div>
 {% endblock %}
