--- a/app/views/forms/education/nursery-name.html
+++ b/app/views/forms/education/nursery-name.html
@@ -10,7 +10,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
         <h1 class="govuk-heading-l">
-            Apply online for primary 1 August 2019
+            Apply online for primary 1 - August 2019
         </h1>
       <form class="form" method="post">
 
@@ -36,7 +36,7 @@
       </form>
       <div class="design-notes-box">
           <h3 class="govuk-heading-s">Design notes:</h3>
-          <p>This is only provisional content to illustrate. Heading and bullet points for no nursery or nursery out ERC might change</p>    
+          <p>This is only provisional content to illustrate</p>    
       </div>
     </div>
 </div>
