--- a/app/views/forms/education/nursery1.html
+++ b/app/views/forms/education/nursery1.html
@@ -10,7 +10,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
         <h1 class="govuk-heading-l">
-            Apply online for primary 1 August 2019
+            Apply online for primary 1 - August 2019
         </h1>
       <form class="form" method="post">
 
@@ -20,18 +20,18 @@
           id: "nursery",
           name: "nursery",
           label: {
-            text: "What nursery is your child attending?",
+            text: "What nursery does your child go to?",
             classes: "govuk-!-font-size-24"
           },
             items: [
               {
-                value: "My Child is not attending nursery",
-                text: "My child is not attending nursery",
+                value: "None",
+                text: "None",
                 selected: true
               },
               {
-                value: "My child is at a nursery but not in East Renfrewshire",
-                text: "My child is at a nursery but not in East Renfrewshire"
+                value: "Another nursery",
+                text: "Another nursery"
               },
               {
                 value: "Arthurlie Family Centre",
@@ -121,7 +121,7 @@
       </form>
       <div class="design-notes-box">
           <h3 class="govuk-heading-s">Design notes:</h3>
-          <p>This is only provisional content to illustrate. Heading and bullet points for no nursery or nursery out ERC might change</p>    
+          <p>Selecting: Another nursery takes you to a page to enter the name and address for it</p>    
       </div>
     </div>
 </div>
