--- a/app/views/forms/education/sibling-stage.html
+++ b/app/views/forms/education/sibling-stage.html
@@ -10,7 +10,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
         <h1 class="govuk-heading-l">
-            Apply online for primary 1 August 2019
+            Apply online for primary 1 - August 2019
         </h1>
       <form class="form" method="post">
         {% from "radios/macro.njk" import govukRadios %}
@@ -21,7 +21,7 @@
           name: "sibling-stage",
           fieldset: {
             legend: {
-              text: "Sibling's stage when school starts",
+              text: "What primary are they in?",
               isPageHeading: true,
               classes: "govuk-fieldset__legend--m"
             }
@@ -66,6 +66,7 @@
         </form>
         <div class="design-notes-box">
             <h3 class="govuk-heading-s">Design notes:</h3>
+            <p><strong>New content - Sharon is rewording and asking about the stage now (as opposed to "when school starts") - need to be agreed by Education</strong></p>
             <p>As we have removed the term 'older' in the previous pages, we can now have the option of P1 in the list for the parents of twins, to make sure they are not stuck on this question.</p>
             <p>question will need to be re-worded as previous one to make sure the sibling is at the school when the P1 starts - Heather</p>
         </div>
