--- a/app/views/forms/education/sibling.html
+++ b/app/views/forms/education/sibling.html
@@ -10,7 +10,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
         <h1 class="govuk-heading-l">
-            Apply online for primary 1 August 2019
+            Apply online for primary 1 - August 2019
         </h1>
       <form class="form" method="post">
       {% from "radios/macro.njk" import govukRadios %}
@@ -22,7 +22,7 @@
         value: data['sibling'],
         fieldset: {
           legend: {
-            text: "Will your child have a sibling at the school when they start?",
+            text: "Do you have another child at the school?",
             isPageHeading: true,
             classes: "govuk-fieldset__legend--m"
           }
@@ -46,7 +46,7 @@
       </form>
       <div class="design-notes-box">
           <h3 class="govuk-heading-s">Design notes:</h3>
-          <p>rewording needed to make clear the sibling is in attendance at the school when the P1 starts in August</p>    
+          <p>New content - not agreed yet by Education - Asking about the actual situation, seems easier to understand than asking about projecting the situation at the start of the term</p>    
       </div>
     </div>
 </div>
