--- a/app/views/forms/education/info.html
+++ b/app/views/forms/education/info.html
@@ -10,14 +10,17 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
         <h1 class="govuk-heading-l">
-            Apply online for primary 1 August 2019
+            Apply online for primary 1 - August 2019
         </h1>
       <h2 class="govuk-heading-m">
           Other information
         </h2>
-      <p>Required in cases where catchment school applied for is oversubscribed</p>
-      <!--p>We need some further information in case your catchment school is full.</p>
-      <p>We’ll ask you to provide proof of these answers later in the process.</p-->
+        <p>We can’t always guarantee places at your catchment school.</p> 
+
+        <p>If this happens we need extra information to prioritise places.</p> 
+        
+        <p>We’ll ask for proof of any details you give.</p>
+        
 
       {{ govukButton({
         "text": "Continue",
@@ -26,7 +29,7 @@
 
       <div class="design-notes-box">
           <h3 class="govuk-heading-s">Design notes:</h3>
-          <p>The content will be different, we will refer to the original application form , this is just to illustrate that we will address the priorities grouped after this point, with some guidance here. </p>
+          <p>The content is new but still been worked on, we will refer to the original application form , this is just to illustrate that we will address the priorities grouped after this point, with some guidance here. </p>
           <p>After this page, we remove all texts which was there previously mentioning "if your catchment school is full" to avoid adding stress by repetition.</p>
           <p>Heather's note: with this statement it would be helpful to refer the applicant to the policy again</p>
       </div>
