--- a/app/views/forms/education/postcode-with-address.html
+++ b/app/views/forms/education/postcode-with-address.html
@@ -10,7 +10,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
       <h1 class="govuk-heading-l">
-          Apply online for primary 1 August 2019
+          Apply online for primary 1 - August 2019
       </h1>
       <h2 class="govuk-heading-m">
           Property
