--- a/app/views/forms/education/single-details.html
+++ b/app/views/forms/education/single-details.html
@@ -10,7 +10,7 @@ Single parent or carer details
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
         <h1 class="govuk-heading-l">
-            Apply online for primary 1 August 2019
+            Apply online for primary 1 - August 2019
         </h1>
         <form class="form" method="post">
         {% from "textarea/macro.njk" import govukTextarea %}
