--- a/app/views/forms/menu-forms.html
+++ b/app/views/forms/menu-forms.html
@@ -8,7 +8,7 @@
 {% block content %}
 <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
   <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
+    <div class="govuk-grid-column-full">
       <h1 class="govuk-heading-xl">
         Forms
       </h1>
@@ -17,7 +17,7 @@
       </p>
 
       <ul class="govuk-list govuk-list--bullet">
-        <li><a href="education/P1-start.html">a possible version of registering P1 children</a></li><br>
+        <li><a href="education/P1-start.html">a possible version of registering P1 children</a> <strong class="govuk-tag info">last update: 21/11 evening</strong></li><br>
         <li><a href="housing/CBLstart.html"> simplified CBL (for illustration)</a></li>
         <!--li><a href="education-alternative/P1-start.html">registering P1 children - alternative - more in line with GDS guidelines</a></li-->
         <!--li><a href="housing/start.html">a very rough illustration of a form for housing (DRAFT)</a></li>
