--- a/app/views/forms/education/declaration-error.html
+++ b/app/views/forms/education/declaration-error.html
@@ -34,6 +34,9 @@
             classes: "govuk-fieldset__legend--m"
           }
         },
+        errorMessage: {
+          text: "You need select is you agree or not"
+        },
         items: [
           {
             value: "yes",
@@ -56,7 +59,7 @@
 </div>
 <div class="design-notes-box">
     <h3 class="govuk-heading-s">Design notes:</h3>
-    <p>This is new content - needs to be signed off by Education - <strong>we need content for the page they are redirected if they select No and for the error message</strong></p>
+    <p>This is new content - needs to be signed off by Education - <strong>we need content for the page they are redirected if they select No  and for the error message</strong></p>
     <p>To see an <a href="/forms/education/declaration1.html">alternative with 4 checkboxes</a> you need to tick to go through</p>
 </div>
 
