--- a/app/views/forms/education/defer.html
+++ b/app/views/forms/education/defer.html
@@ -46,7 +46,12 @@
       </form>
       <div class="design-notes-box">
           <h3 class="govuk-heading-s">Design notes:</h3>
-          <p>guidance will be provided</p>    
+          <p>guidance will be provided - there are 5 paragraphs just now...</p> 
+          <ul class="govuk-list govuk-list--bullet">
+            <li>may be an information page before this page for everyone, or</li>
+            <li>content but below the green button here? or</li> 
+            <li>if they select yes, we show the content and ask them to confirm they still want to defer after reading it?</li>    
+          </ul>
       </div>
     </div>
 </div>
