--- a/app/views/forms/education/denominational-or-non.html
+++ b/app/views/forms/education/denominational-or-non.html
@@ -45,11 +45,12 @@
       </form>
       <div class="design-notes-box">
           <h3 class="govuk-heading-s">Design notes:</h3>
-          <p>need confirmation for the question: "Select your preferred catchment school" or "Select a school"</p>
-          <p>List of the schools from CAG to be double checked make sure each name is exactly as the list we have for the alternative school, to avoid the school being present again in the second list.</p>
-          <p>Scott has a way to display differently from CAG - he has managed it for OLM and could do it for Thomas too
+          <ul class="govuk-list govuk-list--bullet">
+              <li>List of the schools from CAG to be double checked make sure each name is exactly as the list we have for the alternative school, to avoid the school being present again in the second list.</li>
+              <li>Scott has a way to display differently from CAG - he has managed it for OLM and could do it for Thomas too</li>
+              <li>Scott to look at displaying 3 schools when CAG return two non denom. and one denom. Will also make sure it suppresses the right one from 2nd choice</li>
+          </ul>
 
-          </p>
       </div>
     </div>
 </div>
