--- a/app/views/forms/education/moving-date.html
+++ b/app/views/forms/education/moving-date.html
@@ -68,7 +68,7 @@
     <ul class="govuk-list govuk-list--number">
       <li>check the 3 fields have been completed, if not, error is: Enter the date you are moving into your new address</li>
       <li>check if the date is valid date (for example: no 31 of April), if not, error is: The date is not valid</li> 
-      <li>check the date is within the range (to be confirmed by Education) not before day the person is applying and not after a deadline to be set by Education - content for error needed</li>
+      <li>check the date is after the day they apply, but not deadline in the future, it can be after the start of the term.</li>
   </ul>
 </div>
 
