--- a/app/views/forms/education/nursery1.html
+++ b/app/views/forms/education/nursery1.html
@@ -121,7 +121,7 @@
       </form>
       <div class="design-notes-box">
           <h3 class="govuk-heading-s">Design notes:</h3>
-          <p>Selecting: Another nursery takes you to a page to enter the name and address for it</p>    
+          <p>Selecting: 'Another nursery' takes you to a page to enter the name and address for it</p>    
       </div>
     </div>
 </div>
