--- a/app/views/forms/education/postcode.html
+++ b/app/views/forms/education/postcode.html
@@ -45,11 +45,9 @@
     <div class="design-notes-box">
         <h3 class="govuk-heading-s">Design notes:</h3>
         <ul class="govuk-list govuk-list--bullet">
-          <li>Content changes to make sure they understand it's the address the child will be living at, at the start of the term</li>
           <li>Has to be an ERC postcode</li>
-          <li>If the address is not found (new houses in ERC), we will have  the same message for everyone</li>
+          <li>If the address is not found (new houses in ERC), we will have the same message for everyone: <strong>"Unfortunately, we cannot find your address. Please phone the Education Admissions Team on 0141 577 3246 for advice. "</strong></li>
           <li>Maidenhill is not treated differently</li>
-          <li>possibly a link to the schools websites and a phone number to contact the admission team</li>
         </ul>
     </div>
     </div>
