--- a/app/views/forms/education/school-2nd.html
+++ b/app/views/forms/education/school-2nd.html
@@ -133,7 +133,7 @@
     </form>
     <div class="design-notes-box">
         <h3 class="govuk-heading-s">Design notes:</h3>
-        <p>Content still being worked on</p>    
+        <p>Content still being worked on - None is more complex than that, might need content to explain they need to check the full details in the policy as the consequences of selecting None are different depending on various factors</p>    
     </div>
     </div>
 </div>
