--- a/app/views/forms/education/sibling-stage.html
+++ b/app/views/forms/education/sibling-stage.html
@@ -67,6 +67,7 @@
         <div class="design-notes-box">
             <h3 class="govuk-heading-s">Design notes:</h3>
             <p><strong>New content - Sharon is rewording and asking about the stage now (as opposed to "when school starts") - need to be agreed by Education</strong></p>
+            <p>Term "they" might be confusing for parents who have more than one kid at school, as they won't be able to enter more than one stage in the list</p>
             <p>As we have removed the term 'older' in the previous pages, we can now have the option of P1 in the list for the parents of twins, to make sure they are not stuck on this question.</p>
             <p>question will need to be re-worded as previous one to make sure the sibling is at the school when the P1 starts - Heather</p>
         </div>
