--- a/app/views/forms/education/single-details.html
+++ b/app/views/forms/education/single-details.html
@@ -33,7 +33,7 @@ Single parent or carer details
       </form>
       <div class="design-notes-box">
           <h3 class="govuk-heading-s">Design notes:</h3>
-          <p>This will be re-worded</p>
+          <p>This will be re-worded - we want to avoid 'help' or 'beneficial', maybe use 'impact' or 'affect'?</p>
       </div>
     </div>
 </div>
