--- a/app/views/forms/education/summary.html
+++ b/app/views/forms/education/summary.html
@@ -240,9 +240,13 @@
 
 <div class="design-notes-box">
     <h3 class="govuk-heading-s">Design notes:</h3>
-  <p>The content will change. We maybe need a different heading at the top. Some guidance to make sure they understand it's the only place they can print the page to save what they entered. The questions a user didn't see should be removed, but we should display optional ones even if they didn't answer. Labels should be bold (only on mobile just now, not on desktop).</p>
-  <p>We decide not to make the edit possible as this is complex to make especially to make sure that we come back directly to that page. Some questions could not be edited (like the postcode as it affect the UPRN) and some questions have logic routing.</p>
-  <p>can only some of this data be passed to GOSS?</p>
+    <ul class="govuk-list govuk-list--bullet">
+        <li>The content will change. Some guidance to make sure they understand it's the only place they can print the page to save what they entered.</li>
+        <li>The questions a user didn't see should be removed, but we should display optional ones even if they didn't answer. Labels should be bold (only on mobile just now, not on desktop).</li>
+        <li>We decided not to make the edit possible as this is complex to make especially to make sure that we come back directly to that page. Some questions could not be edited (like the postcode as it affect the UPRN) and some questions have logic routing.</li>
+        <li>can only some of this data be passed to GOSS?</li>
+    </ul>
+
    
 </div>
 {% endblock %}
