--- a/app/views/forms/education/medical.html
+++ b/app/views/forms/education/medical.html
@@ -48,6 +48,7 @@
           <h3 class="govuk-heading-s">Design notes:</h3>
           <p>This will be re-worded to make sure parents understand why we ask and what conditions are relevant or not - it should be question 2 of the priority questions</p>
           <p>Heather: revise the wording to reflect original question on current application form </p>
+          <p>We could ask if the GP has been involved and prepared the notes for the school as it could be an indicator that we do need to know about it.</p>
       </div>
     </div>
 </div>
