add link to real privacy notice for education

--- a/app/views/privacy.html
+++ b/app/views/privacy.html
@@ -32,4 +32,8 @@
     </div>
 </div>
 
+<div class="design-notes-box">
+    <h3 class="govuk-heading-s">Design notes:</h3>
+    <p>The real page the privacy notice is going to for Education is this one: <a href="https://www.eastrenfrewshire.gov.uk/privacy" target="_blank">https://www.eastrenfrewshire.gov.uk/privacy</a></p>
+</div>
 {% endblock %}
